--- a/DemoApp/MainWindow.axaml
+++ b/DemoApp/MainWindow.axaml
@@ -1,19 +1,33 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:scottPlot="clr-namespace:ScottPlot.Avalonia;assembly=ScottPlot.Avalonia"
         x:Class="DemoApp.MainWindow"
         Title="DemoApp"
-        Width="600" Height="450">
-    <!-- Welcome to Avalonia! -->
-
-    <Panel>
-        <Grid ColumnDefinitions="200, 1.5*, 4*" RowDefinitions="Auto, Auto, Auto" Margin="4">
-            <Button Name="DateStringButton" 
-                    Click="date_String_Now_Button_Click"
-                    Grid.Row="0" Grid.Column="0">Print Date String!</Button>
-            <Button Name="DateStringUtcButton" 
-                    Click="date_String_UTCNow_Button_Click"
-                    Grid.Row="1" Grid.Column="0">Print UTC Date String!</Button>
+        Width="800" Height="560">
+        
+        <Grid ColumnDefinitions="1*, Auto" RowDefinitions="Auto, Auto, Auto, 1*" Margin="4">
+                <!-- <Button Name="DateStringButton"  -->
+                <!--         Click="date_String_Now_Button_Click" -->
+                <!--         Grid.Row="0" Grid.Column="0">Print Date String!</Button> -->
+                <Button Name="DateStringButton" 
+                        Command="{Binding DateStringButtonClicked}"
+                        Grid.Row="0" Grid.Column="0">Print Date String!</Button>
+                <TextBlock Name="DateStringTextBlock"
+                           Text="{Binding DateString}"
+                           Grid.Row="0" Grid.Column="1"/>
+                <!-- <Button Name="DateStringUtcButton"  -->
+                <!--         Click="date_String_UTCNow_Button_Click" -->
+                <!--         Grid.Row="1" Grid.Column="0">Print UTC Date String!</Button> -->
+                <Button Name="DateStringUtcButton" 
+                        Command="{Binding DateStringUtcButtonClicked}"
+                        Grid.Row="1" Grid.Column="0">Print UTC Date String!</Button>
+                <TextBlock Name="DateStringUtcTextBlock"
+                        Text="{Binding DateStringUtc}"
+                        Grid.Row="1" Grid.Column="1"/>
+                <Button Name="ShowGraphButton" 
+                        Click="show_Graph_Button_Click"
+                        Grid.Row="2" Grid.Column="0">show graph!</Button>
+                <scottPlot:AvaPlot Grid.Row="3" Grid.Column="0" Name="AvaPlot1"/>
         </Grid>
-    </Panel>
-    
+        <!-- <scottPlot:AvaPlot Name="AvaPlot1"/> -->
 </Window>
