--- a/ReactiveUiDemo/App.axaml
+++ b/ReactiveUiDemo/App.axaml
@@ -1,8 +1,8 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:DemoApp"
-             x:Class="DemoApp.App">
-    
+             xmlns:local="using:ReactiveUiDemo"
+             x:Class="ReactiveUiDemo.App">
+
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
