--- a/DemoApp/App.axaml
+++ b/DemoApp/App.axaml
@@ -3,6 +3,7 @@
              x:Class="DemoApp.App">
 
     <Application.Styles>
-        <FluentTheme Mode="Light"/>
+        <!-- <FluentTheme Mode="Light"/> -->
+        <FluentTheme />
     </Application.Styles>
 </Application>
